# tank-controls

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-14-project-setup.md  2026-05-15-phase-a-config-dryrun.md  2026-05-16-phase-b-voice.md  2026-05-17-phase-c-vision.md  2026-05-18-phase-d-fusion.md
docs/superpowers/specs/: 2026-05-14-project-setup-design.md  2026-05-15-phase-a-config-dryrun-design.md  2026-05-16-phase-b-voice-design.md  2026-05-17-phase-c-vision-design.md  2026-05-18-phase-d-fusion-design.md
src/tank_controls/: main.py
src/tank_controls/audio/: capture.py  intent.py  stt.py  vad.py
src/tank_controls/config/: errors.py  loader.py
src/tank_controls/hid/: _keys.py  dry_run.py  feedback.py  output.py  panic.py
src/tank_controls/vision/: capture.py  debug.py  gesture.py  hid.py  landmarks.py
tests/: conftest.py  test_imports.py  test_main.py
tests/audio/: test_intent.py  test_vad.py
tests/config/: test_errors.py  test_loader.py
tests/hid/: test_dry_run.py  test_feedback.py  test_output.py  test_panic.py
tests/vision/: test_gesture.py  test_gesture_hid.py
