[project]
name = "tank-controls"
version = "0.1.0"
description = "Multimodal War Thunder controls via voice and hand gestures"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper",
    "webrtcvad",
    "setuptools<71",
    "mediapipe",
    "opencv-python",
    "sounddevice",
    "pynput",
    "numpy",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

[project.scripts]
tank-controls = "tank_controls.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tank_controls"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
